# fsh

./: .gitignore  LICENSE  README.md  pyproject.toml
core/: command_parser.py  fsh.py  fsh_builtins.py  utils.py
