[tool.poetry]
name = "fsh"
version = "0.1.0"
description = "simple python shell"
authors = ["Roman Tim. <romatim3011@gmail.com>"]
license = "WTFPL"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
